--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for withered-wood-1775 on 2023-05-08T08:09:15Z
+# fly.toml app configuration file generated for spring-surf-4417 on 2023-05-11T01:14:36Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "withered-wood-1775"
+app = "spring-surf-4417"
 primary_region = "nrt"
 
 [build]
@@ -12,19 +12,19 @@ primary_region = "nrt"
     PHP_VERSION = "8.1"
 
 [env]
-  APP_DEBUG = "true"
   APP_ENV = "production"
-  APP_NAME = "Laravel"
-  APP_URL = "https://withered-wood-1775.fly.dev"
-  DB_CONNECTION = "pgsql"
-  DB_DATABASE = "postgres"
-  DB_HOST = "db.lyayfszrlgubopihoqnj.supabase.co"
-  DB_PORT = "5432"
-  DB_USERNAME = "postgres"
   LOG_CHANNEL = "stderr"
   LOG_LEVEL = "info"
   LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
-
+  APP_URL = "https://spring-surf-4417.fly.dev"
+  APP_NAME = "Laravel"
+  APP_DEBUG = false
+  DB_CONNECTION = "pgsql"
+  DB_HOST = "db.lyayfszrlgubopihoqnj.supabase.co"
+  DB_PORT = 5432
+  DB_DATABASE = "postgres"
+  DB_USERNAME = "postgres"
+  
 [http_service]
   internal_port = 8080
   force_https = true
